Source/WebKit/gtk/webkit/webkitviewportattributes.cpp
@@ -542,7 +542,7 @@ void webkitViewportAttributesRecompute(WebKitViewportAttributes* viewportAttribu
     priv->minimumScaleFactor = attributes.minimumScale;
     priv->maximumScaleFactor = attributes.maximumScale;
     priv->devicePixelRatio = attributes.devicePixelRatio;
-    priv->userScalable = arguments.userScalable;
+    priv->userScalable = static_cast<bool>(arguments.userScalable);
 
     if (!priv->isValid) {
         priv->isValid = TRUE;
