Source/WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.cpp
@@ -742,12 +742,13 @@ QString DumpRenderTreeSupportQt::viewportAsText(QWebPage* page, int deviceDPI, c
         availableSize);
 
     QString res;
-    res = res.sprintf("viewport size %dx%d scale %f with limits [%f, %f]\n",
+    res = res.sprintf("viewport size %dx%d scale %f with limits [%f, %f] and userScalable %f\n",
             conf.layoutSize.width(),
             conf.layoutSize.height(),
             conf.initialScale,
             conf.minimumScale,
-            conf.maximumScale);
+            conf.maximumScale,
+            conf.userScalable);
 
     return res;
 }
